[package]
name = "system-monitor"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unsafe_code = "forbid"
unused = { level = "allow", priority = -1 }

[dependencies]
# MQTT client
rumqttc = "0.24"

# data storage
dashmap = "6.1.0"

# System information
sysinfo = "0.35.2"

# Error handling
thiserror = "2.0.12"

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"

# Time operations
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.45.1", features = ["full"] }
